load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")

ts_project(
    name = "tinyland-auth-redis",
    srcs = glob(
        ["src/**/*.ts"],
        exclude = ["src/__tests__/**"],
    ),
    declaration = True,
    declaration_map = True,
    source_map = True,
    tsconfig = "tsconfig.json",
    deps = [
        "//:node_modules/@upstash/redis",
        "//:node_modules/@tummycrypt/tinyland-auth",
    ],
)

npm_package(
    name = "pkg",
    srcs = [
        "package.json",
        ":tinyland-auth-redis",
    ],
    package = "@tummycrypt/tinyland-auth-redis",
    visibility = ["//visibility:public"],
)
