load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@tummycrypt_tinyland_auth_redis_npm//:defs.bzl", "npm_link_all_packages")
load("@tummycrypt_tinyland_auth_redis_npm//:vitest/package_json.bzl", vitest_bin = "bin")

package(default_visibility = ["//visibility:public"])

npm_link_all_packages(name = "node_modules")

ts_project(
    name = "tinyland-auth-redis",
    srcs = glob(
        ["src/**/*.ts"],
        exclude = ["src/__tests__/**"],
    ),
    declaration = True,
    declaration_map = True,
    out_dir = "dist",
    root_dir = "src",
    source_map = False,
    transpiler = "tsc",
    tsconfig = "tsconfig.json",
    validate = False,
    deps = [
        ":node_modules",
        ":node_modules/@tummycrypt/tinyland-auth",
        ":node_modules/@types/node",
        ":node_modules/@upstash/redis",
    ],
)

vitest_bin.vitest_test(
    name = "test",
    args = ["run"],
    data = glob(["src/**/*.ts"]) + [
        ":node_modules",
        "tsconfig.json",
        "vitest.config.ts",
    ],
    log_level = "info",
)

npm_package(
    name = "pkg",
    srcs = [
        ":tinyland-auth-redis",
        "README.md",
        "package.json",
    ],
    package = "@tummycrypt/tinyland-auth-redis",
    version = "0.1.1",
)
